k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: todo-app
spec:
  selector:
    app: todo-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
